--- a/views/login.ejs
+++ b/views/login.ejs
@@ -63,6 +63,19 @@
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
 
+
+
+
+<style>
+
+
+</style>
+
+
+
+
+
+
 	</head>
 	<body>
 
@@ -104,7 +117,24 @@
 
 			</div>
 
+			<div class="container-fluid">
+				<div class="table-responsive">
+				<form>
+			    	<table class="container">
+			        <h1 align="center" class="text-info">Login</h1>
 
+			        	<tr class="col-lg-6 col-sm-6 col-md-6">
+								</span><input type="text"   class="form-control" placeholder="usernmame" align="middle"  class="tr1" /> <br><br>
+			            </tr> <br>
+			            <tr class="col-lg-6 col-sm-6 col-md-6">
+				            	 <input type="password"  class="form-control" placeholder="password" align="middle" class="tr2" />
+										 </tr>
+
+			        </table>
+							<button type="submit" class="btn btn-success" >Log In</button>
+			    </form>
+			    <p class="para">lost your password?</p>
+			 </div>
 
 
 
