some template editing by saif

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -106,120 +106,68 @@
 			<div class="fh5co-gallery">
 
 				<a class="gallery-item" href="single.html">
-					<img src="images/work_1.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
+					<img src="images/mechanics.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
 					<span class="overlay">
-						<h2>Nature</h2>
-						<span>14 Photos</span>
+						<h2>Mechanics</h2>
+						<span>Find local Mechanic</span>
 					</span>
 				</a>
 				<a class="gallery-item" href="single.html">
-					<img src="images/work_2.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
+					<img src="images/hometutor.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
 					<span class="overlay">
-						<h2>People</h2>
-						<span>7 Photos</span>
+						<h2>Tutor</h2>
+						<span>Find The Best Tutor</span>
 					</span>
 				</a>
 				<a class="gallery-item" href="single.html">
-					<img src="images/work_3.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
+					<img src="images/plumber.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
 					<span class="overlay">
-						<h2>Sky</h2>
-						<span>22 Photos</span>
-					</span>
-				</a>
-				<a class="gallery-item" href="single.html">
-					<img src="images/work_4.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
-					<span class="overlay">
-						<h2>Building</h2>
-						<span>28 Photos</span>
-					</span>
-				</a>
-				<a class="gallery-item" href="single.html">
-					<img src="images/work_5.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
-					<span class="overlay">
-						<h2>People 2</h2>
-						<span>17 Photos</span>
-					</span>
-				</a>
-				<a class="gallery-item" href="single.html">
-					<img src="images/work_6.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
-					<span class="overlay">
-						<h2>Beach</h2>
-						<span>34 Photos</span>
-					</span>
-				</a>
-				<a class="gallery-item" href="single.html">
-					<img src="images/work_7.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
-					<span class="overlay">
-						<h2>Vegetarian Food</h2>
-						<span>10 Photos</span>
-					</span>
-				</a>
-				<a class="gallery-item" href="single.html">
-					<img src="images/work_8.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
-					<span class="overlay">
-						<h2>Travel</h2>
-						<span>19 Photos</span>
+						<h2>Plumber</h2>
+						<span>Find The Best Plumber</span>
 					</span>
 				</a>
 
 				<a class="gallery-item" href="single.html">
-					<img src="images/work_9.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
+					<img src="images/carpenter.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
 					<span class="overlay">
-						<h2>Family</h2>
-						<span>42 Photos</span>
-					</span>
-				</a>
-				<a class="gallery-item" href="single.html">
-					<img src="images/work_10.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
-					<span class="overlay">
-						<h2>Food</h2>
-						<span>10 Photos</span>
-					</span>
-				</a>
-				<a class="gallery-item" href="single.html">
-					<img src="images/work_11.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
-					<span class="overlay">
-						<h2>Gadgets</h2>
-						<span>76 Photos</span>
-					</span>
-				</a>
-				<a class="gallery-item" href="single.html">
-					<img src="images/work_12.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
-					<span class="overlay">
-						<h2>Cars</h2>
-						<span>55 Photos</span>
+						<h2>Carpenter</h2>
+						<span>Find Best Carpenter</span>
 					</span>
 				</a>
 
 				<a class="gallery-item" href="single.html">
-					<img src="images/work_13.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
+					<img src="images/driver.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
 					<span class="overlay">
-						<h2>Animals</h2>
-						<span>47 Photos</span>
+						<h2>Driver</h2>
+						<span>Find the Best Driver</span>
 					</span>
 				</a>
 				<a class="gallery-item" href="single.html">
-					<img src="images/work_14.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
+					<img src="images/electrician.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
 					<span class="overlay">
-						<h2>Building 2</h2>
-						<span>10 Photos</span>
+						<h2>Electrician</h2>
+						<span>Find The Best Electrician</span>
+					</span>
+				</a>
+
+				<a class="gallery-item" href="single.html">
+					<img src="images/photographer.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
+					<span class="overlay">
+						<h2>Photographer</h2>
+						<span>Find The Best Photographer</span>
 					</span>
 				</a>
 				<a class="gallery-item" href="single.html">
-					<img src="images/work_15.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
+					<img src="images/labours.jpg" style="height:225px" watermark="Labours" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
 					<span class="overlay">
-						<h2>Baloon</h2>
-						<span>17 Photos</span>
+						<h2>Labours</h2>
+						<span>Find The Best Photographer</span>
 					</span>
 				</a>
-				<a class="gallery-item" href="single.html">
-					<img src="images/work_16.jpg" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
-					<span class="overlay">
-						<h2>Animals 2</h2>
-						<span>22 Photos</span>
-					</span>
-				</a>
-			</div>
+
+
+
+
 
 
 
