--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,7 +4,9 @@
 		<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle"><i></i></a>
 		<aside id="fh5co-aside" role="complementary" class="border js-fullheight">
 
-			<h1 id="fh5co-logo"><a onclick="alert('You are already in Home Page')" style="cursor:pointer"><img src="images/logo-colored.png" alt="Free HTML5 Bootstrap Website Template"></a></h1>
+			<h1 id="fh5co-logo"><a onclick="alert('You are already in Home Page')" style="cursor:pointer"><img src="images/logo.jpg" style="width:200px;height:200px" alt="Worker In Street"></a></h1>
+       <p style="color:green;margin-left:30px">Worker in Street</p>
+
 			<nav id="fh5co-main-menu" role="navigation">
 				<ul>
 					<li class="fh5co-active"><a style="cursor:pointer">Home</a></li>
@@ -19,7 +21,7 @@
 			</nav>
 
 			<div class="fh5co-footer">
-				<p><small>&copy; 2016 Blend Free HTML5. All Rights Reserved.</span> <span>Designed by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> </span> <span>Demo Images: <a href="http://pexels.com/" target="_blank">Pexels</a></span></small></p>
+				<p><small>&copy; copyright Worker in Street</span> <span>Owned By<a href="http://www.facebook.com/saifrazaaa" target="_blank"> Saif Raza</a> </span> </small></p>
 				<ul>
 					<li><a href="#"><i class="icon-facebook"></i></a></li>
 					<li><a href="#"><i class="icon-twitter"></i></a></li>
@@ -100,7 +102,7 @@
 
 
 			<div class="fh5co-narrow-content">
-				<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft">Services</h2>
+				<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInRight">Services</h2>
 				<div class="row">
 					<div class="col-md-6">
 						<div class="fh5co-feature animate-box" data-animate-effect="fadeInLeft">
@@ -108,19 +110,19 @@
 								<i class="icon-strategy"></i>
 							</div>
 							<div class="fh5co-text">
-								<h3>Strategy</h3>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+								<h3>What We Offer?</h3>
+								<p>You can Go and Search for the worker and get easy approach to that particular person  </p>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-6">
-						<div class="fh5co-feature animate-box" data-animate-effect="fadeInLeft">
+						<div class="fh5co-feature animate-box" data-animate-effect="fadeInRight">
 							<div class="fh5co-icon">
 								<i class="icon-telescope"></i>
 							</div>
 							<div class="fh5co-text">
-								<h3>Explore</h3>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+								<h3>What is our Goal?</h3>
+								<p>We wants you to provide a better approach to look for a needy worker by sitting in home just by one click</p>
 							</div>
 						</div>
 					</div>
@@ -131,7 +133,18 @@
 								<i class="icon-circle-compass"></i>
 							</div>
 							<div class="fh5co-text">
-								<h3>Direction</h3>
+								<h3>How To Use?</h3>
+								<p>Just Go and Search for the worker whatever you required like (photographer,electrician,mechanics,plumber,carpenter e.t.c) </p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6">
+						<div class="fh5co-feature animate-box" data-animate-effect="fadeInRight">
+							<div class="fh5co-icon">
+								<i class="icon-tools-2"></i>
+							</div>
+							<div class="fh5co-text">
+								<h3>Expertise</h3>
 								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
 							</div>
 						</div>
@@ -142,11 +155,12 @@
 								<i class="icon-tools-2"></i>
 							</div>
 							<div class="fh5co-text">
-								<h3>Expertise</h3>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+								<h3>Wants to Earn?</h3>
+								<p>Simply Go to the registration page and provide your authentic information and get registered .By sitting inside home you will get direct calls from the customers</p>
 							</div>
 						</div>
 					</div>
+
 
 				</div>
 			</div>
@@ -207,7 +221,7 @@
 				<div class="row">
 					<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
 						<p class="fh5co-lead">Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-						<p><a href="#" class="btn btn-primary btn-outline">Learn More</a></p>
+						<p><a href="/aboutus" class="btn btn-primary btn-outline">Learn More</a></p>
 					</div>
 
 				</div>
