--- a/views/login.hbs
+++ b/views/login.hbs
@@ -108,7 +108,8 @@ body {
 		<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle"><i></i></a>
 		<aside id="fh5co-aside" role="complementary" class="border">
 
-			<h1 id="fh5co-logo"><a href="/"><img src="images/logo-colored.png" alt="Free HTML5 Bootstrap Website Template"></a></h1>
+			<h1 id="fh5co-logo"><a href="/"><img src="images/logo.jpg" style="width:200px;height:200px" alt="Worker In Street"></a></h1>
+      <p style="color:green;margin-left:30px">Worker in Street</p>
       <nav id="fh5co-main-menu" role="navigation">
 				<ul>
 					<li ><a href="/">Home</a></li>
@@ -123,7 +124,7 @@ body {
 			</nav>
 
 			<div class="fh5co-footer">
-				<p><small>&copy; 2016 Blend Free HTML5. All Rights Reserved.</span> <span>Designed by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> </span> <span>Demo Images: <a href="http://pexels.com/" target="_blank">Pexels</a></span></small></p>
+        <p><small>&copy; copyright Worker in Street</span> <span>Owned By<a href="http://www.facebook.com/saifrazaaa" target="_blank"> Saif Raza</a> </span> </small></p>
 				<ul>
 					<li><a href="#"><i class="icon-facebook"></i></a></li>
 					<li><a href="#"><i class="icon-twitter"></i></a></li>
@@ -137,7 +138,10 @@ body {
 		<div id="fh5co-main">
 
 			<div class="fh5co-narrow-content">
-				<p class="text-center quote" style="font-size:25px">Please Login To Your Account</p>
+        {{#if message}}
+          {{this}}
+        {{/if}}
+				<p class="text-center quote" style="font-size:25px">If You are A Worker Please Login To Your Account First</p>
 
 			</div>
 			<div class="login-page">
