--- a/views/services.hbs
+++ b/views/services.hbs
@@ -6,8 +6,9 @@
 		<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle"><i></i></a>
 		<aside id="fh5co-aside" role="complementary" class="border">
 
-			<h1 id="fh5co-logo"><a href="/"><img src="images/logo-colored.png" alt="Free HTML5 Bootstrap Website Template"></a></h1>
-      <nav id="fh5co-main-menu" role="navigation">
+			<h1 id="fh5co-logo"><a href="/"><img src="images/logo.jpg" style="width:200px;height:200px" alt="Worker In Street"></a></h1>
+			<p style="color:green;margin-left:30px">Worker in Street</p>
+			<nav id="fh5co-main-menu" role="navigation">
 				<ul>
 					<li><a href="/">Home</a></li>
 
@@ -21,7 +22,7 @@
 			</nav>
 
 			<div class="fh5co-footer">
-				<p><small>&copy; 2016 Blend Free HTML5. All Rights Reserved.</span> <span>Designed by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> </span> <span>Demo Images: <a href="http://pexels.com/" target="_blank">Pexels</a></span></small></p>
+				<p><small>&copy; copyright Worker in Street</span> <span>Owned By<a href="http://www.facebook.com/saifrazaaa" target="_blank"> Saif Raza</a> </span> </small></p>
 				<ul>
 					<li><a href="#"><i class="icon-facebook"></i></a></li>
 					<li><a href="#"><i class="icon-twitter"></i></a></li>
@@ -51,5 +52,3 @@
 
 	</div>
 </div>
-
-	
