template and contactus changing in views

--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -32,8 +32,7 @@
 
 		<div id="fh5co-main">
 
-			<div id="map"></div>
-
+			<div class="col-lg-12 col-sm-12 col-md-12 "><iframe id="map" width="1000" height="1000" frameborder="0" style="border:0" src="" allowfullscreen></iframe></div>
 			<div class="fh5co-more-contact">
 				<div class="fh5co-narrow-content">
 					<div class="row">
@@ -43,7 +42,7 @@
 									<i class="icon-envelope-o"></i>
 								</div>
 								<div class="fh5co-text">
-									<p><a href="#">info@domain.com</a></p>
+									<p><a href="#">razasaif171@gmail.com</a></p>
 								</div>
 							</div>
 						</div>
@@ -53,7 +52,7 @@
 									<i class="icon-map-o"></i>
 								</div>
 								<div class="fh5co-text">
-									<p>198 West 21th Street, Suite 721 New York NY 10016</p>
+									<p>Mohammad Ali Jinnah University,Block 6,P.E.C.H.S Karachi</p>
 								</div>
 							</div>
 						</div>
@@ -63,7 +62,7 @@
 									<i class="icon-phone"></i>
 								</div>
 								<div class="fh5co-text">
-									<p><a href="tel://">+123 456 7890</a></p>
+									<p><a href="tel://">+923087256653</a></p>
 								</div>
 							</div>
 						</div>
@@ -97,7 +96,7 @@
 										<textarea name="" id="message" cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
 									</div>
 									<div class="form-group">
-										<input type="submit" class="btn btn-primary btn-md" value="Send Message">
+										<input type="submit" class="btn btn-primary btn-md" onclick="alert('you sbmitted the request')" value="Send Message">
 									</div>
 								</div>
 
