--- a/views/login.hbs
+++ b/views/login.hbs
@@ -161,7 +161,7 @@ body {
 	    <form class="login-form" action="/users/login" method="post">
 	      <input type="text" name="username" placeholder="Username or Email" required/>
 	      <input type="password" name="password" placeholder="password" required/>
-	      <button>login</button><i>New to here ?</i> <a href="/registration">Sign Up</a>
+	      <button>Login</button><i>New to here ?</i> <a href="/registration">Sign Up</a>
 
 	    </form>
 	  </div>
