update the user profile

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -16,7 +16,7 @@
 					{{#if Dashboard}}
 					<li class="fh5co-active"><a onclick="alert('you are already in homepage')" style="cursor:pointer">Home</a></li>
 					<li><a href="/services">Services</a></li>
-				
+
 					<li><a href="/workers/dashboard">Dashboard</a></li>
 
 					<li><a href="/aboutus">About Us</a></li>
@@ -50,6 +50,17 @@
 		</aside>
 
 		<div id="fh5co-main">
+			<br>
+			<form>
+					<br>
+
+					<div class="col-lg-7 col-md-4 col-sm-4"></div><div class="col-lg-4 col-md-4 col-sm-4"><input type="text" class="form-control"  placeholder="Search For The Worker" /></div><div class="col-lg-1 col-sm-3 col-md-3"><button type="Submit" class="btn btn-success" class="form-control" >Search <span class="glyphicon glyphicon-search"></span></button></div>
+
+
+
+		</form>
+			<br>
+			<br>
 			<div class="fh5co-gallery">
 
 				<a class="gallery-item" href="single.html">
