--- a/views/registration.hbs
+++ b/views/registration.hbs
@@ -1,4 +1,4 @@
-<div>
+
 	<link rel="stylesheets" href="/stylesheets/registerpage.css" />
 	<div id="fh5co-page">
 
@@ -45,23 +45,19 @@
 
 			</aside>
 
-			<div id="fh5co-main">
+	<div id="fh5co-main">
 
 
-				<div class="container-fluid" class="container">
-				    	<div class="table-responsive">
+	<div class="container-fluid" class="container">
+		<div class="container">
+			<table class="table table-responsive table-hover table-striped">
+	    	<div class="fh5co-narrow-content">
+	      	<h1>Please Sign Up To get Start</h1>
 
-
-				             </div>
-	<div class="container">
-		<table class="table table-responsive table-hover table-striped">
-	    <div class="fh5co-narrow-content">
-	      <h1>Please Sign Up To get Start</h1>
-
-	    </div>
+	    	</div>
 		<div class="row">
 	    <div class="col-md-8">
-	      <section>
+
 
 	        <hr>
 	        {{#if errors }}
@@ -125,7 +121,7 @@
 	          <div class="col-md-5 col-sm-8">
 	          	<div class="input-group">
 	              <span class="input-group-addon"><i class="glyphicon glyphicon-phone"></i></span>
-	            <input type="text" class="form-control" required value="03087256653" name="contact"  placeholder="Enter your Primary contact no." >
+	            <input type="text" class="form-control" required value="03087256653" name="contactno"  placeholder="Enter your Primary contact no." >
 	            </div>
 	          </div>
 	        </div></td></tr>
