changing in views files

--- a/views/services.hbs
+++ b/views/services.hbs
@@ -1,45 +1,95 @@
+<div id="fh5co-page">
+			<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle"><i></i></a>
 
+				<aside id="fh5co-aside" role="complementary" class="border">
 
+					<h1 id="fh5co-logo"><a href="/"><img src="images/logo.jpg" style="width:200px;height:200px" alt="Worker In Street"></a></h1>
 
-	<div id="fh5co-page">
+						<p style="color:green;margin-left:30px">Worker in Street</p>
 
-		<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle"><i></i></a>
-		<aside id="fh5co-aside" role="complementary" class="border">
+						<nav id="fh5co-main-menu" role="navigation">
 
-			<h1 id="fh5co-logo"><a href="/"><img src="images/logo.jpg" style="width:200px;height:200px" alt="Worker In Street"></a></h1>
-			<p style="color:green;margin-left:30px">Worker in Street</p>
-			<nav id="fh5co-main-menu" role="navigation">
 				<ul>
 
 					{{#if Dashboard}}
-					<li ><a href="/" style="cursor:pointer">Home</a></li>
-					<li class="fh5co-active"><a href="">Services</a></li>
-					<li><a href="/workers/dashboard">Dashboard</a></li>
-					<li><a href="/aboutus">About Us</a></li>
-					<li><a href="/contactus">Contact Us</a></li>
+
+					<li >
+							<a href="/" style="cursor:pointer">Home</a>
+					</li>
+
+					<li class="fh5co-active">
+							<a href="">Services</a>
+					</li>
+
+					<li>
+						<a href="/workers/dashboard">Dashboard</a>
+					</li>
+
+					<li>
+						<a href="/aboutus">About Us</a>
+					</li>
+
+					<li>
+						<a href="/contactus">Contact Us</a>
+					</li>
+
 					{{else}}
-					<li><a href="/" style="cursor:pointer">Home</a></li>
 
-					<li class="fh5co-active"><a href="">Services</a></li>
-					<li><a href="/registration">Registration</a></li>
-					<li><a href="/login">Login</a></li>
+					<li>
+						<a href="/" style="cursor:pointer">Home</a>
+					</li>
 
-					<li><a href="/aboutus">About Us</a></li>
-					<li><a href="/contactus">Contact Us</a></li>
+					<li class="fh5co-active">
+						<a href="">Services</a>
+					 </li>
+					<li>
+						<a href="/registration">Registration</a>
+					</li>
+
+					<li>
+						<a href="/login">Login</a>
+					</li>
+
+					<li>
+						<a href="/aboutus">About Us</a>
+					</li>
+
+					<li>
+						<a href="/contactus">Contact Us</a>
+					</li>
+
 					{{/if}}
+		</ul>
 
+</nav>
 
-				</ul>
-			</nav>
+<div class="fh5co-footer">
 
-			<div class="fh5co-footer">
-				<p><small>&copy; copyright Worker in Street</span> <span>Owned By<a href="http://www.facebook.com/saifrazaaa" target="_blank"> Saif Raza</a> </span> </small></p>
+				<p>
+					<small>&copy; copyright Worker in Street</span>
+						 							<span>Owned By
+							<a href="http://www.facebook.com/saifrazaaa" target="_blank"> Saif Raza</a>
+						</span> </small></p>
 				<ul>
-					<li><a href="#"><i class="icon-facebook"></i></a></li>
-					<li><a href="#"><i class="icon-twitter"></i></a></li>
-					<li><a href="#"><i class="icon-instagram"></i></a></li>
-					<li><a href="#"><i class="icon-linkedin"></i></a></li>
+
+					<li>
+						<a href="#"><i class="icon-facebook"></i></a>
+					</li>
+
+					<li>
+						<a href="#"><i class="icon-twitter"></i></a>
+					</li>
+
+					<li>
+						<a href="#"><i class="icon-instagram"></i></a>
+					</li>
+
+					<li>
+						<a href="#"><i class="icon-linkedin"></i></a>
+					</li>
+
 				</ul>
+
 			</div>
 
 		</aside>
@@ -52,14 +102,5 @@
 			<h1>Our Services</h1>
 
 		</div>
-
-
-
-
-
-
-
-
-
 	</div>
 </div>
