--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,180 +1,367 @@
-
-
-
 	<div id="fh5co-page">
 
-		<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle"><i></i></a>
-		<aside id="fh5co-aside" role="complementary" class="border">
+			<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle"><i></i>
+			</a>
 
-			<h1 id="fh5co-logo"><a href="/"><img src="images/logo.jpg" style="width:200px;height:200px" alt="Worker In Street"></a></h1>
-			<p style="color:green;margin-left:30px">Worker in Street</p>
-			<nav id="fh5co-main-menu" role="navigation">
+				<aside id="fh5co-aside" role="complementary" class="border">
+
+					<h1 id="fh5co-logo"><a href="/">
+							<img src="images/logo.jpg" style="width:200px;height:200px" alt="Worker In Street"></a>
+				</h1>
+
+					<p style="color:green;margin-left:30px">Worker in Street</p>
+
+					<nav id="fh5co-main-menu" role="navigation">
+
 				<ul>
 
 					{{#if Dashboard}}
-					<li ><a href="/" style="cursor:pointer">Home</a></li>
-					<li><a href="/services">Services</a></li>
-					<li><a href="/workers/dashboard">Dashboard</a></li>
-					<li class="fh5co-active"><a href="">About Us</a></li>
-					<li><a href="/contactus">Contact Us</a></li>
+
+					<li >
+							<a href="/" style="cursor:pointer">Home</a>
+					</li>
+
+					<li>
+						<a href="/services">Services</a>
+					</li>
+
+					<li>
+						<a href="/workers/dashboard">Dashboard</a>
+					</li>
+
+					<li class="fh5co-active">
+						<a href="">About Us</a>
+					</li>
+
+					<li>
+						<a href="/contactus">Contact Us</a>
+					</li>
+
 					{{else}}
-					<li ><a href="/" style="cursor:pointer">Home</a></li>
 
-					<li><a href="/services">Services</a></li>
-					<li><a href="/registration">Registration</a></li>
-					<li><a href="/login">Login</a></li>
+					<li >
+						<a href="/" style="cursor:pointer">Home</a>
+					</li>
 
-					<li class="fh5co-active"><a href="">About Us</a></li>
-					<li ><a href="/contactus">Contact Us</a></li>
+					<li>
+						<a href="/services">Services</a>
+					</li>
+
+					<li>
+						<a href="/registration">Registration</a>
+					</li>
+
+					<li>
+						<a href="/login">Login</a>
+					</li>
+
+					<li class="fh5co-active">
+						<a href="">About Us</a>
+					</li>
+					<li >
+						<a href="/contactus">Contact Us</a>
+					</li>
+
 					{{/if}}
+</ul>
 
-
-				</ul>
 			</nav>
 
 			<div class="fh5co-footer">
-				<p><small>&copy; copyright Worker in Street</span> <span>Owned By<a href="http://www.facebook.com/saifrazaaa" target="_blank"> Saif Raza</a> </span> </small></p>
-				<ul>
-					<li><a href="#"><i class="icon-facebook"></i></a></li>
-					<li><a href="#"><i class="icon-twitter"></i></a></li>
-					<li><a href="#"><i class="icon-instagram"></i></a></li>
-					<li><a href="#"><i class="icon-linkedin"></i></a></li>
-				</ul>
-			</div>
 
+				<p><small>&copy; copyright Worker in Street</span> <span>Owned By<a href="http://www.facebook.com/saifrazaaa" target="_blank"> Saif Raza</a> </span> </small></p>
+
+				<ul>
+
+					<li>
+						<a href="#"><i class="icon-facebook"></i></a>
+					</li>
+
+					<li>
+						<a href="#"><i class="icon-twitter"></i></a>
+					</li>
+
+					<li>
+						<a href="#"><i class="icon-instagram"></i></a>
+					</li>
+
+					<li>
+						<a href="#"><i class="icon-linkedin"></i></a>
+					</li>
+
+				</ul>
+
+			</div>
 		</aside>
 
 		<div id="fh5co-main">
 
 			<div class="fh5co-narrow-content">
-				<div class="row">
-					<div class="col-md-5">
-						<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft">I'm John Doe a Photographer</h2>
-						<p class="fh5co-lead animate-box" data-animate-effect="fadeInLeft">Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+					<div class="row">
+						<div class="col-md-5">
+
+							<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft">I'm John Doe a Photographer</h2>
+
+								<p class="fh5co-lead animate-box" data-animate-effect="fadeInLeft">Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
 						<p class="animate-box" data-animate-effect="fadeInLeft"> Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
-					</div>
+							</div>
+
 					<div class="col-md-6 col-md-push-1 animate-box" data-animate-effect="fadeInLeft">
+
 						<img src="images/img_1.jpg" alt="Free HTML5 Bootstrap Template" class="img-responsive">
+
 					</div>
 				</div>
 
 			</div>
 
 			<div class="fh5co-narrow-content  animate-box fh5co-border-bottom" data-animate-effect="fadeInLeft">
+
 				<h2 class="fh5co-heading" >Photographers</span></h2>
 
 				<div class="row">
+
 					<div class="col-md-4 fh5co-staff">
+
 						<img src="images/person3.jpg" alt="Free HTML5 Bootstrap Template" class="img-responsive">
+
 						<h3>Athan Smith</h3>
+
 						<h4>Co-Founder, CEO</h4>
+
 						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+
 						<ul class="fh5co-social">
-							<li><a href="#"><i class="icon-google"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble"></i></a></li>
-							<li><a href="#"><i class="icon-twitter"></i></a></li>
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
-							<li><a href="#"><i class="icon-instagram"></i></a></li>
+								<li>
+									<a href="#"><i class="icon-google"></i></a>
+								</li>
+
+								<li>
+									<a href="#"><i class="icon-dribbble"></i></a>
+								</li>
+
+								<li>
+									<a href="#"><i class="icon-twitter"></i></a>
+								</li>
+
+								<li>
+									<a href="#"><i class="icon-facebook"></i></a>
+								</li>
+
+								<li>
+									<a href="#"><i class="icon-instagram"></i></a>
+								</li>
+
 						</ul>
+
 					</div>
+
 					<div class="col-md-4 fh5co-staff">
+
 						<img src="images/person2.jpg" alt="Free HTML5 Bootstrap Template" class="img-responsive">
+
 						<h3>Nathalie Kosley</h3>
+
 						<h4>Co-Founder, CTO</h4>
+
 						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+
 						<ul class="fh5co-social">
-							<li><a href="#"><i class="icon-google"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble"></i></a></li>
-							<li><a href="#"><i class="icon-twitter"></i></a></li>
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
-							<li><a href="#"><i class="icon-instagram"></i></a></li>
+								<li>
+									<a href="#"><i class="icon-google"></i></a>
+								</li>
+
+								<li>
+									<a href="#"><i class="icon-dribbble"></i></a>
+								</li>
+
+								<li>
+									<a href="#"><i class="icon-twitter"></i></a>
+								</li>
+
+								<li>
+									<a href="#"><i class="icon-facebook"></i></a>
+								</li>
+
+								<li>
+									<a href="#"><i class="icon-instagram"></i></a>
+								</li>
+
 						</ul>
+
 					</div>
+
 					<div class="col-md-4 fh5co-staff">
+
 						<img src="images/person4.jpg" alt="Free HTML5 Bootstrap Template" class="img-responsive">
+
 						<h3>Yanna Kuzuki</h3>
+
 						<h4>Co-Founder, Principal</h4>
+
 						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+
 						<ul class="fh5co-social">
-							<li><a href="#"><i class="icon-google"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble"></i></a></li>
-							<li><a href="#"><i class="icon-twitter"></i></a></li>
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
-							<li><a href="#"><i class="icon-instagram"></i></a></li>
+
+							<li>
+								<a href="#"><i class="icon-google"></i></a>
+							</li>
+
+							<li>
+								<a href="#"><i class="icon-dribbble"></i></a>
+							</li>
+
+							<li>
+								<a href="#"><i class="icon-twitter"></i></a>
+							</li>
+
+							<li>
+								<a href="#"><i class="icon-facebook"></i></a>
+							</li>
+
+							<li>
+								<a href="#"><i class="icon-instagram"></i></a>
+							</li>
+
 						</ul>
+
 					</div>
+
 				</div>
+
 			</div>
-
-
-
 			<div class="fh5co-narrow-content fh5co-border-bottom">
-				<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft">This Is What <span>We Love To Do</span></h2>
-				<div class="row">
-					<div class="col-md-6">
-						<div class="fh5co-feature animate-box" data-animate-effect="fadeInLeft">
-							<div class="fh5co-icon">
-								<i class="icon-strategy"></i>
+
+					<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft">This Is What <span>We Love To Do</span></h2>
+
+					<div class="row">
+
+						<div class="col-md-6">
+
+							<div class="fh5co-feature animate-box" data-animate-effect="fadeInLeft">
+
+								<div class="fh5co-icon">
+
+									<i class="icon-strategy"></i>
+
 							</div>
+
 							<div class="fh5co-text">
+
 								<h3>Strategy</h3>
+
 								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+
 							</div>
+
+							</div>
+
 						</div>
-					</div>
-					<div class="col-md-6">
-						<div class="fh5co-feature animate-box" data-animate-effect="fadeInLeft">
+
+						<div class="col-md-6">
+
+							<div class="fh5co-feature animate-box" data-animate-effect="fadeInLeft">
+
 							<div class="fh5co-icon">
+
 								<i class="icon-telescope"></i>
-							</div>
+
+								</div>
+
 							<div class="fh5co-text">
+
 								<h3>Explore</h3>
+
 								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+
 							</div>
+
 						</div>
+
 					</div>
 
 					<div class="col-md-6">
+
 						<div class="fh5co-feature animate-box" data-animate-effect="fadeInLeft">
+
 							<div class="fh5co-icon">
+
 								<i class="icon-circle-compass"></i>
+
 							</div>
+
 							<div class="fh5co-text">
+
 								<h3>Direction</h3>
+
 								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+
 							</div>
+
 						</div>
+
 					</div>
+
 					<div class="col-md-6">
+
 						<div class="fh5co-feature animate-box" data-animate-effect="fadeInLeft">
+
 							<div class="fh5co-icon">
+
 								<i class="icon-tools-2"></i>
+
 							</div>
+
 							<div class="fh5co-text">
+
 								<h3>Expertise</h3>
+
+
 								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+
 							</div>
+
 						</div>
+
 					</div>
 
+
+
 				</div>
+
 			</div>
-
-
 			<div class="fh5co-narrow-content">
+
 				<div class="row">
+
 					<div class="col-md-4 animate-box" data-animate-effect="fadeInLeft">
+
 						<h1 class="fh5co-heading-colored">Get in touch</h1>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
-						<p class="fh5co-lead">Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-						<p><a href="#" class="btn btn-primary btn-outline">Learn More</a></p>
+
 					</div>
 
 				</div>
+
+				<div class="row">
+
+					<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
+
+						<p class="fh5co-lead">Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+
+						<p>
+								<a href="#" class="btn btn-primary btn-outline">Learn More</a>
+						</p>
+
+					</div>
+
+
+
+				</div>
+
 			</div>
+
+
 
 		</div>
+
 	</div>
