--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -1,39 +1,77 @@
-<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle"><i></i></a>
+<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle"><i></i>
+
+</a>
+
+
 <aside id="fh5co-aside" role="complementary" class="border js-fullheight">
 
 
 
   <nav id="fh5co-main-menu" role="navigation">
-    <p style="color:green;margin-left:30px">Worker in Street</p>
-    {{#if user}}
-    <img src="/uploads/{{user.photo}}" class="img-responsive img-circle" style="height:200px;width:200px" alt="Cinque Terre">
-    <br>
-    <h3 class="col-lg-12 col-sm-6 text text-success" >  &nbsp; {{user.username}}</h3>
-    <h4 class="col-lg-12 col-sm-6 text text-info" >You are [{{user.type}}]</h4>
+
+      <p style="color:green;margin-left:30px">Worker in Street</p>
+        {{#if user}}
+            <img src="/uploads/{{user.photo}}" class="img-responsive img-circle" style="height:200px;width:200px" alt="Cinque Terre"> <br>
+                <h3 class="col-lg-12 col-sm-6 text text-success" >  &nbsp; {{user.username}}</h3>
+            <h4 class="col-lg-12 col-sm-6 text text-info" >You are [{{user.type}}]</h4>
 
     <ul>
+          <li class="fh5co-active">
+            <a href="">Dashboard</a>
+          </li>
+          <li>
+            <a href="/workers/edit_profile">Edit Profile</a>
+          </li>
 
-      <li class="fh5co-active"><a href="">Dashboard</a></li>
-      <li><a href="/workers/edit_profile">Edit Profile</a></li>
-      <li><a href="/workers/history">History</a></li>
-      <li><a href="/workers/your_current_location">Current Location</a></li>
-      <li><a href="/">Go To Site</a></li>
-      <li><a href="/contactus">Contact Us</a></li>
-      <li><a href="/workers/logout" >Logout</a></li>
+          <li>
+            <a href="/workers/history">History</a>
+          </li>
+
+          <li>
+            <a href="/workers/your_current_location">Current Location</a>
+          </li>
+
+          <li>
+            <a href="/">Go To Site</a>
+          </li>
+
+          <li>
+            <a href="/contactus">Contact Us</a>
+          </li>
+
+          <li>
+            <a href="/workers/logout" >Logout</a>
+          </li>
 
 
-{{/if}}
+            {{/if}}
+
     </ul>
+
   </nav>
 
   <div class="fh5co-footer">
-    <p><small>&copy; copyright Worker in Street</span> <span>Owned By<a href="http://www.facebook.com/saifrazaaa" target="_blank"> Saif Raza</a> </span> </small></p>
+    <p>
+        <small>&copy; copyright Worker in Street</span> <span>Owned By<a href="http://www.facebook.com/saifrazaaa" target="_blank"> Saif Raza</a> </span> </small></p>
     <ul>
-      <li><a href="#"><i class="icon-facebook"></i></a></li>
-      <li><a href="#"><i class="icon-twitter"></i></a></li>
-      <li><a href="#"><i class="icon-instagram"></i></a></li>
-      <li><a href="#"><i class="icon-linkedin"></i></a></li>
+        <li>
+          <a href="#"><i class="icon-facebook"></i></a>
+        </li>
+
+        <li>
+          <a href="#"><i class="icon-twitter"></i></a>
+        </li>
+
+        <li>
+          <a href="#"><i class="icon-instagram"></i></a>
+        </li>
+
+        <li>
+          <a href="#"><i class="icon-linkedin"></i></a>
+        </li>
+
     </ul>
+
   </div>
 
 </aside>
